<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#4CAF50"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.osmeuslugares.EditLugarActivity" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/textViewNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editTextNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewNombre" />

        <TextView
            android:id="@+id/textViewCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextNombre"
            android:paddingTop="10dp"
            android:text="Categoría"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />
			
		<TextView
		    android:id="@+id/textViewCiudadLugar"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/spinnerCategoria"
		    android:paddingTop="10dp"
		    android:text="@string/ciudad"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:textColor="#000000" />

		<Spinner
		    android:id="@+id/spinnerCategoria"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignBottom="@+id/buttonNuevaCategoria"
		    android:layout_below="@id/textViewCategoria"
		    android:layout_toRightOf="@+id/textViewDireccion"
		    android:entries="@array/lista_tipos"
		    android:gravity="center_vertical|center_horizontal"
		    android:paddingTop="10dp" />
        
         <EditText
             android:id="@+id/editTextCiudad"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/textViewCiudadLugar" />
        
        <TextView
            android:id="@+id/textViewDireccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextCiudad"
            android:paddingTop="10dp"
            android:text="@string/direccion"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

         <EditText
             android:id="@+id/editTextDireccion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/textViewDireccion" />

        <TextView
            android:id="@+id/textViewTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextDireccion"
            android:paddingTop="10dp"
            android:text="@string/telefono"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editTextTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/textViewTelefono" />

        <TextView
            android:id="@+id/textViewUrlLugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextTelefono"
            android:paddingTop="10dp"
            android:text="@string/url"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editTextUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewUrlLugar" />

        <Button
            android:id="@+id/buttonNuevaCategoria"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            
            android:layout_below="@id/textViewCategoria"
            android:background="@android:drawable/ic_menu_add"
            android:onClick="onButtonClickCategoria" />

    </RelativeLayout>



</ScrollView>